--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -11,7 +11,7 @@
 #post-list {
   margin-top: 1rem;
   padding-right: 0.5rem;
-
+  
   .post-preview {
     padding-top: 1.5rem;
     padding-bottom: 1rem;
@@ -19,10 +19,12 @@
 
     h1 {
       font-size: 1.4rem;
+      font-weight: bold;
       margin: 0;
       ~i { // pinned icon
         font-size: 0.86rem;
       }
+      color: var(--sidebar-text-color);
     }
 
     .post-meta {
