--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -16,8 +16,8 @@
   --text-color: #333333;
   --blockquote-border-color: #1B86F9;
   --blockquote-text-color: #27282B;
-  --link-color: #2a408e;
-  --link-underline-color: #dee2e6;
+  --link-color: #1B86F9;
+  --link-underline-color: #1B86F9;
   --text-muted-color: gray;
   --tb-odd-bg: #fbfcfd;
   --tb-border-color: #eaeaea;
