--- a/assets/css/_colors/dark-typography.scss
+++ b/assets/css/_colors/dark-typography.scss
@@ -21,7 +21,7 @@
   --text-color: #F5F6F7;
   --text-muted-color: rgb(107, 116, 124);
   --link-color: rgb(138, 180, 248);
-  --link-underline-color: rgb(82, 108, 150);
+  --link-underline-color: #1B86F9;
   --main-border-color: rgb(44, 45, 45);
   --button-bg: rgb(39, 40, 43);
   --blockquote-border-color: #1B86F9;
