--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -541,8 +541,8 @@ footer {
     padding: 0.3rem .5rem;
     margin: 0 .35rem .5rem 0;
     &:hover {
-      background-color: #2a408e;
-      border-color: #2a408e;
+      background-color: #1B86F9;
+      border-color: #1B86F9;
       color: #fff;
       transition: none;
     }
@@ -634,6 +634,7 @@ blockquote {
   border-radius: 4px;
   border-left: 4px solid var(--blockquote-border-color);
   padding-left: 1rem;
+  background: var(--blockquote-bg-color);
   color: var(--blockquote-text-color);
   .post-content & {
     a {
