--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -16,6 +16,7 @@
   --text-color: #333333;
   --blockquote-border-color: #1B86F9;
   --blockquote-text-color: #27282B;
+  --blockquote-bg-color: #F6F8FA;
   --link-color: #1B86F9;
   --link-underline-color: #1B86F9;
   --text-muted-color: gray;
@@ -51,7 +52,7 @@
   --post-list-text-color: dimgray;
   --btn-patinator-text-color: #555555;
   --btn-paginator-hover-color: #e9ecef;
-  --btn-active-bg: #2a408e;
+  --btn-active-bg: #007bff;
   --btn-active-border-color: #007bff;
   --btn-text-color: #f8f8f8;
   --btn-paginator-border-color: #f1f1f1;
