--- a/assets/css/_addon/syntax.scss
+++ b/assets/css/_addon/syntax.scss
@@ -69,10 +69,10 @@ div > pre {
 
   overflow: auto;
   .lineno {
-    margin: 0.8rem 0;
+    margin: 0.5rem 0;
     padding: 0 0.5rem;
-    min-width: 2.2rem;
-    text-align: right;
+    // min-width: 2.2rem;
+    text-align: center;
     color: var(--highlight-lineno-color);
     border-right: 1px solid var(--highlight-lineno-border-color);
     -webkit-user-select: none;
