--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,10 +13,43 @@ layout: default
 
     <div class="post pl-1 pr-1 pl-sm-2 pr-sm-2 pl-md-4 pr-md-4">
 
+      <!-- categories -->
+      {% if page.categories.size > 0 %}
+      <div class="post-meta mb-3">
+        <i class="far fa-folder-open fa-fw mr-1"></i>
+        {% for category in page.categories %}
+          <a href='{{ site.baseurl }}/categories/{{ category | replace: ' ', '-' | downcase | url_encode }}/'>{{ category }}</a>
+          {%- unless forloop.last -%}, {%- endunless -%}
+        {% endfor %}
+      </div>
+      {% endif %}
+
       <h1 data-toc-skip>{{ page.title }}</h1>
+
+      <div>
+        
+        
+        <!-- tags -->
+        {% if page.tags.size > 0 %}
+        <div class="post-tags">
+          <i class="fa fa-tags fa-fw mr-1"></i>
+          {% for tag in page.tags %}
+          <a href="{{ site.baseurl }}/tags/{{ tag | replace: ' ', '-' | downcase | url_encode }}/"
+            class="post-tag no-text-decoration" >
+            {{- tag -}}
+          </a>
+          {% endfor %}
+          </div>
+        {% endif %}
+
+
+        
+
+      </div>
 
       <div class="post-meta text-muted d-flex flex-column">
         <!-- Published date and author -->
+        
         <div>
           Posted
           {% include timeago.html date=page.date tooltip=true %}
@@ -46,6 +79,7 @@ layout: default
         </div>
         {% endif %}
 
+
       </div> <!-- .post-meta -->
 
       <div class="post-content">
@@ -68,29 +102,7 @@ layout: default
 
       <div class="post-tail-wrapper text-muted">
 
-        <!-- categories -->
-        {% if page.categories.size > 0 %}
-        <div class="post-meta mb-3">
-          <i class="far fa-folder-open fa-fw mr-1"></i>
-          {% for category in page.categories %}
-            <a href='{{ site.baseurl }}/categories/{{ category | replace: ' ', '-' | downcase | url_encode }}/'>{{ category }}</a>
-            {%- unless forloop.last -%}, {%- endunless -%}
-          {% endfor %}
-        </div>
-        {% endif %}
-
-        <!-- tags -->
-        {% if page.tags.size > 0 %}
-        <div class="post-tags">
-          <i class="fa fa-tags fa-fw mr-1"></i>
-          {% for tag in page.tags %}
-          <a href="{{ site.baseurl }}/tags/{{ tag | replace: ' ', '-' | downcase | url_encode }}/"
-            class="post-tag no-text-decoration" >
-            {{- tag -}}
-          </a>
-          {% endfor %}
-          </div>
-        {% endif %}
+        
 
         <div class="post-tail-bottom
           d-flex justify-content-between align-items-center mt-3 pt-5 pb-2">
@@ -121,9 +133,11 @@ layout: default
   <div class="col-12 col-lg-11 col-xl-8">
     <div id="post-extend-wrapper" class="pl-1 pr-1 pl-sm-2 pr-sm-2 pl-md-4 pr-md-4">
 
+    {% include post-nav.html %}
+    
     {% include related-posts.html %}
 
-    {% include post-nav.html %}
+    
 
     {% if site.disqus.comments and page.comments %}
       {% include disqus.html %}
