--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -84,7 +84,7 @@ $sidebar-display: "sidebar-display";
       font-size: 1.5rem;
       letter-spacing: 0.5px;
       &:hover {
-        color: #fff;
+        color: #1B86F9;
         text-decoration: none;
       }
     }
@@ -730,8 +730,8 @@ img {
 
 .post {
   h1 {
-    margin-top: 3rem;
-    margin-bottom: 1rem;
+    margin-top: 0.5rem!important;
+    margin-bottom: 0.3rem;
   }
   em { /* MarkDown italic */
     padding-right: 0.2rem;
@@ -790,6 +790,7 @@ div.post-content .table-wrapper {
 .post-meta {
   font-size: 0.85rem;
   word-spacing: 1px;
+  font-style: italic;
   a {
     @extend %link-color;
     @extend %link-underline;
