--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -27,6 +27,11 @@ $prompt-newer: "{{ site.data.label.post.button.next }}";
   border-color: var(--btn-border-color);
 }
 
+.mb-3, .my-3 {
+  margin-bottom: 0.2rem!important;
+  margin-top: 3.5rem!important;
+}
+
 .post-content {
   > ol, > ul, > dl {
     padding-left: 2rem;
@@ -50,7 +55,7 @@ $prompt-newer: "{{ site.data.label.post.button.next }}";
 }
 
 .post-tail-wrapper {
-  margin-top: 6rem;
+  margin-top: 0.5rem;
   border-bottom: 1px double var(--main-border-color);
   font-size: 0.85rem;
 }
@@ -60,9 +65,8 @@ $prompt-newer: "{{ site.data.label.post.button.next }}";
 }
 
 .post-navigation {
-  padding-top: 3rem;
-  padding-bottom: 4rem;
-
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   .btn {
     @include btn-post-nav;
     color: var(--link-color);
@@ -84,6 +88,7 @@ $prompt-newer: "{{ site.data.label.post.button.next }}";
     &.btn-outline-primary.disabled:focus {
       box-shadow: none;
     }
+
   }
 
   p {
@@ -104,6 +109,8 @@ $prompt-newer: "{{ site.data.label.post.button.next }}";
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
       left: 0.5px;
+      text-align: left;
+      font-weight: bold;
       &::before {
         content: $prompt-older
       }
@@ -112,6 +119,8 @@ $prompt-newer: "{{ site.data.label.post.button.next }}";
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
       right: 0.5px;
+      text-align: right;
+      font-weight: bold;
       &::before {
         content: $prompt-newer
       }
