--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,7 +52,7 @@ layout: page
     <div class="d-flex justify-content-between pr-xl-2">
       <h1>
         <a href="{{ post.url | relative_url }}">
-          <img src="assets/img/sample/tp.png" width="25px"/>
+          <img src="https://gitee.com/j__strawhat/MyImages/raw/master/img/tp.png" width="25px"/>
           {{ post.title }}
           
         </a>
