--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -24,6 +24,7 @@
       tex2jax: {
         skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code'],
         inlineMath: [['$','$'], ['\\(','\\)']],
+        displayMath: [ ['$$','$$'] ],
         processEscapes: true
       },
       TeX: {
