--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -23,7 +23,7 @@
   --tb-odd-bg: #fbfcfd;
   --tb-border-color: #eaeaea;
   --button-bg: #fff;
-  --btn-backtotop-color: #686868;
+  --btn-backtotop-color: #1B86F9;
   --btn-backtotop-border-color: #f1f1f1;
   --btn-box-shadow: #eaeaea;
   --checkbox-color: darkgrey;
