--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -790,7 +790,6 @@ div.post-content .table-wrapper {
 .post-meta {
   font-size: 0.85rem;
   word-spacing: 1px;
-  font-style: italic;
   a {
     @extend %link-color;
     @extend %link-underline;
@@ -802,7 +801,10 @@ div.post-content .table-wrapper {
     }
   }
 }
-
+.mb-3, .my-3 {
+  margin-bottom: 0rem!important;
+  margin-top: 3rem!important;
+}
 .post-content {
   line-height: 1.8;
   margin-top: 2rem;
