--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -571,9 +571,9 @@ footer {
     padding: 0.3rem 0.5rem;
     margin: 0 0.35rem 0.5rem 0;
     &:hover {
-      background-color: #1B86F9;
+      /* background-color: #1B86F9; */
       border-color: #1B86F9;
-      color: #fff;
+      color: #1B86F9;
       transition: none;
     }
   }
@@ -737,6 +737,7 @@ sup {
 }
 
 a {
+  
   @at-root p>#{&} {
     @extend %link-color;
   }
