--- a/assets/css/_colors/dark-typography.scss
+++ b/assets/css/_colors/dark-typography.scss
@@ -26,7 +26,7 @@
   --button-bg: rgb(39, 40, 43);
   --blockquote-border-color: #1B86F9;
   --blockquote-text-color: #F5F6F7;
-  --blockquote-bg-color: #202234;
+  --blockquote-bg-color: #272C33;
   --btn-border-color: rgb(63, 65, 68);
   --btn-backtotop-color: var(--text-color);
   --btn-backtotop-border-color: var(--btn-border-color);
