--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -14,6 +14,7 @@
   --main-border-color: #f3f3f3;
   --btn-border-color: #e9ecef;
   --text-color: #333333;
+  --strong-color: #202124;
   --blockquote-border-color: #1B86F9;
   --blockquote-text-color: #27282B;
   --blockquote-bg-color: #F6F8FA;
