--- a/assets/css/_colors/dark-typography.scss
+++ b/assets/css/_colors/dark-typography.scss
@@ -19,6 +19,7 @@
 
   /* common color */
   --text-color: #F5F6F7;
+  --strong-color: #ff9500;
   --text-muted-color: rgb(107, 116, 124);
   --link-color: rgb(138, 180, 248);
   --link-underline-color: #1B86F9;
