--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -769,7 +769,7 @@ img {
 
 .post {
   h1 {
-    margin-top: 0.5rem!important;
+    margin-top: 0.5rem;
     margin-bottom: 0.3rem;
   }
   em { /* MarkDown italic */
@@ -841,10 +841,10 @@ img {
     }
   }
 }
-.mb-3, .my-3 {
+div.mb-3, .my-3 {
   margin-bottom: 0rem!important;
   margin-top: 3rem!important;
-}
+} 
 .post-content {
   line-height: 1.8;
   margin-top: 2rem;
