--- a/assets/css/_colors/dark-syntax.scss
+++ b/assets/css/_colors/dark-syntax.scss
@@ -6,7 +6,19 @@
 * MIT Licensed
 */
 
+
 @mixin dark-syntax {
+  $highlight-background   : #1d1f21;
+  $highlight-foreground   : #c5c8c6;
+  $highlight-comment      : #969896;
+  $highlight-red          : #e06c75;
+  $highlight-orange       : #d19a66;
+  $highlight-yellow       : #e6c07b;
+  $highlight-green        : #98c379;
+  $highlight-aqua         : #8abeb7;
+  $highlight-blue         : #61aeee;
+  $highlight-purple       : #c678dd;
+
   /* -----  My styles ------ */
   --highlight-bg-color: #272C33;
   --highlighter-rouge-color: #de6b18;
@@ -23,66 +35,69 @@
 
   /* syntax highlight colors from https://raw.githubusercontent.com/jwarby/pygments-css/master/monokai.css */
   .highlight pre { background-color: #272C33; }
-  .highlight .hll { background-color: #272C33; }
-  .highlight .c { color: #75715e; } /* Comment */
-  .highlight .err { color: #960050; background-color: #1e0010; } /* Error */
-  .highlight .k { color: #66d9ef; } /* Keyword */
-  .highlight .l { color: #ae81ff; } /* Literal */
-  .highlight .n { color: #f8f8f2; } /* Name */
-  .highlight .o { color: #f92672; } /* Operator */
-  .highlight .p { color: #f8f8f2; } /* Punctuation */
-  .highlight .cm { color: #75715e; } /* Comment.Multiline */
-  .highlight .cp { color: #75715e; } /* Comment.Preproc */
-  .highlight .c1 { color: #75715e; } /* Comment.Single */
-  .highlight .cs { color: #75715e; } /* Comment.Special */
-  .highlight .ge { color: inherit; font-style: italic; } /* Generic.Emph */
-  .highlight .gs { font-weight: bold; } /* Generic.Strong */
-  .highlight .kc { color: #66d9ef; } /* Keyword.Constant */
-  .highlight .kd { color: #66d9ef; } /* Keyword.Declaration */
-  .highlight .kn { color: #f92672; } /* Keyword.Namespace */
-  .highlight .kp { color: #66d9ef; } /* Keyword.Pseudo */
-  .highlight .kr { color: #66d9ef; } /* Keyword.Reserved */
-  .highlight .kt { color: #66d9ef; } /* Keyword.Type */
-  .highlight .ld { color: #e6db74; } /* Literal.Date */
-  .highlight .m { color: #ae81ff; } /* Literal.Number */
-  .highlight .s { color: #e6db74; } /* Literal.String */
-  .highlight .na { color: #a6e22e; } /* Name.Attribute */
-  .highlight .nb { color: #f8f8f2; } /* Name.Builtin */
-  .highlight .nc { color: #a6e22e; } /* Name.Class */
-  .highlight .no { color: #66d9ef; } /* Name.Constant */
-  .highlight .nd { color: #a6e22e; } /* Name.Decorator */
-  .highlight .ni { color: #f8f8f2; } /* Name.Entity */
-  .highlight .ne { color: #a6e22e; } /* Name.Exception */
-  .highlight .nf { color: #a6e22e; } /* Name.Function */
-  .highlight .nl { color: #f8f8f2; } /* Name.Label */
-  .highlight .nn { color: #f8f8f2; } /* Name.Namespace */
-  .highlight .nx { color: #a6e22e; } /* Name.Other */
-  .highlight .py { color: #f8f8f2; } /* Name.Property */
-  .highlight .nt { color: #f92672; } /* Name.Tag */
-  .highlight .nv { color: #f8f8f2; } /* Name.Variable */
-  .highlight .ow { color: #f92672; } /* Operator.Word */
-  .highlight .w  { color: #f8f8f2; } /* Text.Whitespace */
-  .highlight .mf { color: #ae81ff; } /* Literal.Number.Float */
-  .highlight .mh { color: #ae81ff; } /* Literal.Number.Hex */
-  .highlight .mi { color: #ae81ff; } /* Literal.Number.Integer */
-  .highlight .mo { color: #ae81ff; } /* Literal.Number.Oct */
-  .highlight .sb { color: #e6db74; } /* Literal.String.Backtick */
-  .highlight .sc { color: #e6db74; } /* Literal.String.Char */
-  .highlight .sd { color: #e6db74; } /* Literal.String.Doc */
-  .highlight .s2 { color: #e6db74; } /* Literal.String.Double */
-  .highlight .se { color: #ae81ff; } /* Literal.String.Escape */
-  .highlight .sh { color: #e6db74; } /* Literal.String.Heredoc */
-  .highlight .si { color: #e6db74; } /* Literal.String.Interpol */
-  .highlight .sx { color: #e6db74; } /* Literal.String.Other */
-  .highlight .sr { color: #e6db74; } /* Literal.String.Regex */
-  .highlight .s1 { color: #e6db74; } /* Literal.String.Single */
-  .highlight .ss { color: #e6db74; } /* Literal.String.Symbol */
-  .highlight .bp { color: #f8f8f2; } /* Name.Builtin.Pseudo */
-  .highlight .vc { color: #f8f8f2; } /* Name.Variable.Class */
-  .highlight .vg { color: #f8f8f2; } /* Name.Variable.Global */
-  .highlight .vi { color: #f8f8f2; } /* Name.Variable.Instance */
-  .highlight .il { color: #ae81ff; } /* Literal.Number.Integer.Long */
-  .highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
-  .highlight .gd { color: #f92672; background-color: #561c08; } /* Generic.Deleted & Diff Deleted */
-  .highlight .gi { color: #a6e22e; background-color: #0b5858; } /* Generic.Inserted & Diff Inserted */
+  .highlight .hll { background-color: #ffffcc; } 
+  .highlight .c   { color: $highlight-comment; } /* Comment */
+  .highlight .err { color: $highlight-red; } /* Error */
+  .highlight .k   { color: $highlight-purple; } /* Keyword */
+  .highlight .l   { color: $highlight-orange; } /* Literal */
+  .highlight .n   { color: $highlight-foreground; } /* Name */
+  .highlight .o   { color: $highlight-aqua; } /* Operator */
+  .highlight .p   { color: $highlight-foreground; } /* Punctuation */
+  .highlight .cm  { color: $highlight-comment; } /* Comment.Multiline */
+  .highlight .cp  { color: $highlight-green; } /* Comment.Preproc */
+  .highlight .c1  { color: $highlight-comment; } /* Comment.Single */
+  .highlight .cs  { color: $highlight-comment; } /* Comment.Special */
+  .highlight .gd  { color: $highlight-red; } /* Generic.Deleted */
+  .highlight .ge  { font-style: italic; } /* Generic.Emph */
+  .highlight .gh  { font-weight: bold; color: $highlight-foreground; } /* Generic.Heading */
+  .highlight .gi  { color: $highlight-green; } /* Generic.Inserted */
+  .highlight .gp  { font-weight: bold; color: $highlight-comment; } /* Generic.Prompt */
+  .highlight .gs  { font-weight: bold; } /* Generic.Strong */
+  .highlight .gu  { font-weight: bold; color: $highlight-aqua; } /* Generic.Subheading */
+  .highlight .kc  { color: $highlight-purple; } /* Keyword.Constant */
+  .highlight .kd  { color: $highlight-purple; } /* Keyword.Declaration */
+  .highlight .kn  { color: $highlight-aqua; } /* Keyword.Namespace */
+  .highlight .kp  { color: $highlight-purple; } /* Keyword.Pseudo */
+  .highlight .kr  { color: $highlight-purple; } /* Keyword.Reserved */
+  .highlight .kt  { color: $highlight-purple; } /* Keyword.Type */
+  .highlight .ld  { color: $highlight-green; } /* Literal.Date */
+  .highlight .m   { color: $highlight-orange; } /* Literal.Number */
+  .highlight .s   { color: $highlight-green; } /* Literal.String */
+  .highlight .na  { color: $highlight-blue; } /* Name.Attribute */
+  .highlight .nb  { color: $highlight-foreground; } /* Name.Builtin */
+  .highlight .nc  { color: $highlight-yellow; } /* Name.Class */
+  .highlight .no  { color: $highlight-red; } /* Name.Constant */
+  .highlight .nd  { color: $highlight-aqua; } /* Name.Decorator */
+  .highlight .ni  { color: $highlight-foreground; } /* Name.Entity */
+  .highlight .ne  { color: $highlight-red; } /* Name.Exception */
+  .highlight .nf  { color: $highlight-purple; } /* Name.Function */
+  .highlight .nl  { color: $highlight-blue; } /* Name.Label */
+  .highlight .nn  { color: $highlight-yellow; } /* Name.Namespace */
+  .highlight .nx  { color: $highlight-blue; } /* Name.Other */
+  .highlight .py  { color: $highlight-foreground; } /* Name.Property */
+  .highlight .nt  { color: $highlight-aqua; } /* Name.Tag */
+  .highlight .nv  { color: $highlight-foreground; } /* Name.Variable */
+  .highlight .ow  { color: $highlight-aqua; } /* Operator.Word */
+  .highlight .w   { color: $highlight-foreground; } /* Text.Whitespace */
+  .highlight .mf  { color: $highlight-orange; } /* Literal.Number.Float */
+  .highlight .mh  { color: $highlight-orange; } /* Literal.Number.Hex */
+  .highlight .mi  { color: $highlight-orange; } /* Literal.Number.Integer */
+  .highlight .mo  { color: $highlight-orange; } /* Literal.Number.Oct */
+  .highlight .sb  { color: $highlight-green; } /* Literal.String.Backtick */
+  .highlight .sc  { color: $highlight-foreground; } /* Literal.String.Char */
+  .highlight .sd  { color: $highlight-comment; } /* Literal.String.Doc */
+  .highlight .s2  { color: $highlight-green; } /* Literal.String.Double */
+  .highlight .se  { color: $highlight-orange; } /* Literal.String.Escape */
+  .highlight .sh  { color: $highlight-green; } /* Literal.String.Heredoc */
+  .highlight .si  { color: $highlight-orange; } /* Literal.String.Interpol */
+  .highlight .sx  { color: $highlight-green; } /* Literal.String.Other */
+  .highlight .sr  { color: $highlight-green; } /* Literal.String.Regex */
+  .highlight .s1  { color: $highlight-green; } /* Literal.String.Single */
+  .highlight .ss  { color: $highlight-green; } /* Literal.String.Symbol */
+  .highlight .bp  { color: $highlight-foreground; } /* Name.Builtin.Pseudo */
+  .highlight .vc  { color: $highlight-red; } /* Name.Variable.Class */
+  .highlight .vg  { color: $highlight-red; } /* Name.Variable.Global */
+  .highlight .vi  { color: $highlight-red; } /* Name.Variable.Instance */
+  .highlight .il  { color: $highlight-orange; } /* Literal.Number.Integer.Long */
+
 }
