--- a/assets/css/_colors/light-syntax.scss
+++ b/assets/css/_colors/light-syntax.scss
@@ -6,74 +6,91 @@
 * MIT Licensed
 */
 
+
+
 @mixin light-syntax {
+
+  $highlight-background   : #f7f7f7;
+  $highlight-foreground   : #383a42;
+  $highlight-comment      : #8e908c;
+  $highlight-red          : #e45649;
+  $highlight-orange       : #986801;
+  $highlight-yellow       : #c18401;
+  $highlight-green        : #50a14f;
+  $highlight-aqua         : #0184bb;
+  $highlight-blue         : #4078f2;
+  $highlight-purple       : #a626a4;
+
   /* see: <https://raw.githubusercontent.com/jwarby/pygments-css/master/github.css> */
-  .highlight .hll { background-color: #ffffcc; }
-  .highlight .c { color: #999988; font-style: italic; } /* Comment */
-  .highlight .err { color: #a61717; background-color: #e3d2d2; } /* Error */
-  .highlight .k { color: #000000; font-weight: bold; } /* Keyword */
-  .highlight .o { color: #000000; font-weight: bold; } /* Operator */
-  .highlight .cm { color: #999988; font-style: italic; } /* Comment.Multiline */
-  .highlight .cp { color: #999999; font-weight: bold; font-style: italic; } /* Comment.Preproc */
-  .highlight .c1 { color: #999988; } /* Comment.Single */
-  .highlight .cs { color: #999999; font-weight: bold; font-style: italic; } /* Comment.Special */
-  .highlight .gd { color: #d01040; background-color: #ffdddd; } /* Generic.Deleted */
-  .highlight .ge { color: #000000; font-style: italic; } /* Generic.Emph */
-  .highlight .gr { color: #aa0000; } /* Generic.Error */
-  .highlight .gh { color: #999999; } /* Generic.Heading */
-  .highlight .gi { color: #008080; background-color: #ddffdd; } /* Generic.Inserted */
-  .highlight .go { color: #888888; } /* Generic.Output */
-  .highlight .gp { color: #555555; } /* Generic.Prompt */
-  .highlight .gs { font-weight: bold; } /* Generic.Strong */
-  .highlight .gu { color: #aaaaaa; } /* Generic.Subheading */
-  .highlight .gt { color: #aa0000; } /* Generic.Traceback */
-  .highlight .kc { color: #000000; font-weight: bold; } /* Keyword.Constant */
-  .highlight .kd { color: #000000; font-weight: bold; } /* Keyword.Declaration */
-  .highlight .kn { color: #000000; font-weight: bold; } /* Keyword.Namespace */
-  .highlight .kp { color: #000000; font-weight: bold; } /* Keyword.Pseudo */
-  .highlight .kr { color: #000000; font-weight: bold; } /* Keyword.Reserved */
-  .highlight .kt { color: #445588; font-weight: bold; } /* Keyword.Type */
-  .highlight .m { color: #009999; } /* Literal.Number */
-  .highlight .s { color: #d01040; } /* Literal.String */
-  .highlight .na { color: #008080; } /* Name.Attribute */
-  .highlight .nb { color: #0086b3; } /* Name.Builtin */
-  .highlight .nc { color: #445588; font-weight: bold; } /* Name.Class */
-  .highlight .no { color: #008080; } /* Name.Constant */
-  .highlight .nd { color: #3c5d5d; font-weight: bold; } /* Name.Decorator */
-  .highlight .ni { color: #800080; } /* Name.Entity */
-  .highlight .ne { color: #990000; font-weight: bold; } /* Name.Exception */
-  .highlight .nf { color: #990000; font-weight: bold; } /* Name.Function */
-  .highlight .nl { color: #990000; font-weight: bold; } /* Name.Label */
-  .highlight .nn { color: #555555; } /* Name.Namespace */
-  .highlight .nt { color: #000080; } /* Name.Tag */
-  .highlight .nv { color: #008080; } /* Name.Variable */
-  .highlight .ow { color: #000000; font-weight: bold; } /* Operator.Word */
-  .highlight .w { color: #bbbbbb; } /* Text.Whitespace */
-  .highlight .mf { color: #009999; } /* Literal.Number.Float */
-  .highlight .mh { color: #009999; } /* Literal.Number.Hex */
-  .highlight .mi { color: #009999; } /* Literal.Number.Integer */
-  .highlight .mo { color: #009999; } /* Literal.Number.Oct */
-  .highlight .sb { color: #d01040; } /* Literal.String.Backtick */
-  .highlight .sc { color: #d01040; } /* Literal.String.Char */
-  .highlight .sd { color: #d01040; } /* Literal.String.Doc */
-  .highlight .s2 { color: #d01040; } /* Literal.String.Double */
-  .highlight .se { color: #d01040; } /* Literal.String.Escape */
-  .highlight .sh { color: #d01040; } /* Literal.String.Heredoc */
-  .highlight .si { color: #d01040; } /* Literal.String.Interpol */
-  .highlight .sx { color: #d01040; } /* Literal.String.Other */
-  .highlight .sr { color: #009926; } /* Literal.String.Regex */
-  .highlight .s1 { color: #d01040; } /* Literal.String.Single */
-  .highlight .ss { color: #990073; } /* Literal.String.Symbol */
-  .highlight .bp { color: #999999; } /* Name.Builtin.Pseudo */
-  .highlight .vc { color: #008080; } /* Name.Variable.Class */
-  .highlight .vg { color: #008080; } /* Name.Variable.Global */
-  .highlight .vi { color: #008080; } /* Name.Variable.Instance */
-  .highlight .il { color: #009999; } /* Literal.Number.Integer.Long */
+  .highlight .hll { background-color: #ffffcc; } 
+  .highlight .c   { color: $highlight-comment; } /* Comment */
+  .highlight .err { color: $highlight-red; } /* Error */
+  .highlight .k   { color: $highlight-purple; } /* Keyword */
+  .highlight .l   { color: $highlight-orange; } /* Literal */
+  .highlight .n   { color: $highlight-foreground; } /* Name */
+  .highlight .o   { color: $highlight-aqua; } /* Operator */
+  .highlight .p   { color: $highlight-foreground; } /* Punctuation */
+  .highlight .cm  { color: $highlight-comment; } /* Comment.Multiline */
+  .highlight .cp  { color: $highlight-green; } /* Comment.Preproc */
+  .highlight .c1  { color: $highlight-comment; } /* Comment.Single */
+  .highlight .cs  { color: $highlight-comment; } /* Comment.Special */
+  .highlight .gd  { color: $highlight-red; } /* Generic.Deleted */
+  .highlight .ge  { font-style: italic; } /* Generic.Emph */
+  .highlight .gh  { font-weight: bold; color: $highlight-foreground; } /* Generic.Heading */
+  .highlight .gi  { color: $highlight-green; } /* Generic.Inserted */
+  .highlight .gp  { font-weight: bold; color: $highlight-comment; } /* Generic.Prompt */
+  .highlight .gs  { font-weight: bold; } /* Generic.Strong */
+  .highlight .gu  { font-weight: bold; color: $highlight-aqua; } /* Generic.Subheading */
+  .highlight .kc  { color: $highlight-purple; } /* Keyword.Constant */
+  .highlight .kd  { color: $highlight-purple; } /* Keyword.Declaration */
+  .highlight .kn  { color: $highlight-aqua; } /* Keyword.Namespace */
+  .highlight .kp  { color: $highlight-purple; } /* Keyword.Pseudo */
+  .highlight .kr  { color: $highlight-purple; } /* Keyword.Reserved */
+  .highlight .kt  { color: $highlight-purple; } /* Keyword.Type */
+  .highlight .ld  { color: $highlight-green; } /* Literal.Date */
+  .highlight .m   { color: $highlight-orange; } /* Literal.Number */
+  .highlight .s   { color: $highlight-green; } /* Literal.String */
+  .highlight .na  { color: $highlight-blue; } /* Name.Attribute */
+  .highlight .nb  { color: $highlight-foreground; } /* Name.Builtin */
+  .highlight .nc  { color: $highlight-yellow; } /* Name.Class */
+  .highlight .no  { color: $highlight-red; } /* Name.Constant */
+  .highlight .nd  { color: $highlight-aqua; } /* Name.Decorator */
+  .highlight .ni  { color: $highlight-foreground; } /* Name.Entity */
+  .highlight .ne  { color: $highlight-red; } /* Name.Exception */
+  .highlight .nf  { color: $highlight-purple; } /* Name.Function */
+  .highlight .nl  { color: $highlight-blue; } /* Name.Label */
+  .highlight .nn  { color: $highlight-yellow; } /* Name.Namespace */
+  .highlight .nx  { color: $highlight-blue; } /* Name.Other */
+  .highlight .py  { color: $highlight-foreground; } /* Name.Property */
+  .highlight .nt  { color: $highlight-aqua; } /* Name.Tag */
+  .highlight .nv  { color: $highlight-foreground; } /* Name.Variable */
+  .highlight .ow  { color: $highlight-aqua; } /* Operator.Word */
+  .highlight .w   { color: $highlight-foreground; } /* Text.Whitespace */
+  .highlight .mf  { color: $highlight-orange; } /* Literal.Number.Float */
+  .highlight .mh  { color: $highlight-orange; } /* Literal.Number.Hex */
+  .highlight .mi  { color: $highlight-orange; } /* Literal.Number.Integer */
+  .highlight .mo  { color: $highlight-orange; } /* Literal.Number.Oct */
+  .highlight .sb  { color: $highlight-green; } /* Literal.String.Backtick */
+  .highlight .sc  { color: $highlight-foreground; } /* Literal.String.Char */
+  .highlight .sd  { color: $highlight-comment; } /* Literal.String.Doc */
+  .highlight .s2  { color: $highlight-green; } /* Literal.String.Double */
+  .highlight .se  { color: $highlight-orange; } /* Literal.String.Escape */
+  .highlight .sh  { color: $highlight-green; } /* Literal.String.Heredoc */
+  .highlight .si  { color: $highlight-orange; } /* Literal.String.Interpol */
+  .highlight .sx  { color: $highlight-green; } /* Literal.String.Other */
+  .highlight .sr  { color: $highlight-green; } /* Literal.String.Regex */
+  .highlight .s1  { color: $highlight-green; } /* Literal.String.Single */
+  .highlight .ss  { color: $highlight-green; } /* Literal.String.Symbol */
+  .highlight .bp  { color: $highlight-foreground; } /* Name.Builtin.Pseudo */
+  .highlight .vc  { color: $highlight-red; } /* Name.Variable.Class */
+  .highlight .vg  { color: $highlight-red; } /* Name.Variable.Global */
+  .highlight .vi  { color: $highlight-red; } /* Name.Variable.Instance */
+  .highlight .il  { color: $highlight-orange; } /* Literal.Number.Integer.Long */
 
   /* --- custom light colors --- */
-  --highlight-bg-color: #f7f7f7;
+  --highlight-bg-color: #f6f8fa;
   --highlighter-rouge-color: #0086B3;
   --highlight-lineno-color: #c2c6cc;
   --highlight-lineno-border-color: #e9ecef;
-  --inline-code-bg: #f3f3f3;
+  --inline-code-bg: #f6f8fa;
 } // light-syntax
