--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -58,8 +58,8 @@
       {% capture url %}
         {%- if entry.type == 'github' -%}
           https://github.com/{{ site.github.username }}
-        {%- elsif entry.type == 'twitter' -%}
-          https://twitter.com/{{ site.twitter.username }}
+        {%- elsif entry.type == 'music' -%}
+          https://music.163.com/#/user/home?id={{ site.music.username }}
         {%- elsif entry.type == 'email' -%}
           {% assign email = site.social.email | split: '@' %}
           javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@')
