--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,10 +52,8 @@ layout: page
 
     <h1>
       <a href="{{ post.url | relative_url }}">
-
-        <img src="https://gitee.com/j__strawhat/MyImages/raw/master/img/tp.png" width="25px"/>
+        <img class="emoji" src = "https://gitee.com/j__strawhat/MyImages/raw/master/img/tp.png" width = "22px"/>
         {{ post.title }}
-        
       </a>
     </h1>
 
