--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -132,7 +132,7 @@ $sidebar-display: "sidebar-display";
 
   ul {
     height: $tab-height * $tab-count;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     padding-left: 0;
 
     > li {
@@ -275,7 +275,7 @@ $sidebar-display: "sidebar-display";
     -webkit-transition: transform 0.5s;
     -moz-transition: transform 0.5s;
     transition: transform 0.5s;
-
+    
     &:hover {
       -ms-transform: scale(1.2);
       -moz-transform: scale(1.2);
@@ -662,8 +662,8 @@ h5 {
 
 blockquote {
   border-radius: 4px;
-  padding-top: 1rem;
-  padding-bottom: .1rem;
+  padding-top: 1px;
+  padding-bottom: 2px;
   border-left: 4px solid var(--blockquote-border-color);
   padding-left: 1rem;
   background: var(--blockquote-bg-color);
@@ -755,8 +755,10 @@ a {
 
 } // a
 
-img {
+img:not(.emoji) {
   max-width: 100%;
+  border-radius: 5px;
+  box-shadow: 0 1px 15px rgba(27,31,35,.15), 0 0 1px rgba(106,115,125,.35);
 }
 
 .post {
@@ -764,6 +766,11 @@ img {
     margin-top: 0.5rem;
     margin-bottom: 0.3rem;
   }
+  p {
+    margin-top: 0.4rem;
+    margin-bottom: 0.5rem;
+  }
+  
   em { /* MarkDown italic */
     padding-right: 0.2rem;
   }
@@ -838,7 +845,7 @@ div.mb-3, .my-3 {
   margin-top: 3rem!important;
 } 
 .post-content {
-  line-height: 1.8;
+  line-height: 1.7;
   margin-top: 2rem;
   overflow-wrap: break-word;
   word-wrap: break-word;
@@ -900,7 +907,7 @@ div.mb-3, .my-3 {
   }
 
   p {
-    font-size: 1.08rem;
+    font-size: 16px;
     @include img(true);
   }
 
@@ -1405,6 +1412,8 @@ div.mb-3, .my-3 {
 
   .post-content p {
     font-size: 1.03rem;
+    margin-top: .75rem!important;
+    margin-bottom: 0.5rem!important;
   }
 
   footer > div.d-felx {
