--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -137,9 +137,8 @@ layout: default
 
     {% include post-nav.html %}
 
-    {% if site.disqus.comments and page.comments %}
-      {% include disqus.html %}
-    {% endif %}
+    {% include valine.html %}
+    
 
     </div> <!-- #post-extend-wrapper -->
 
