--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,6 +60,9 @@
     integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
     crossorigin="anonymous">
 
+  <!--Valine-->
+  <script src='//cdn.jsdelivr.net/npm/valine@1/dist/Valine.min.js'></script>
+
   {% include css-selector.html %}
 
   <!-- JavaScripts -->
