--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,6 +83,20 @@ layout: page
           <i class="fas fa-spinner fa-spin fa-fw"></i>
         </span>
         {% endif %}
+
+        <!-- tags -->
+        
+        <div class="post-tags">
+          <i class="fa fa-tags fa-fw mr-1"></i>
+          {% for tag in post.tags %}
+          <a href="{{ site.baseurl }}/tags/{{ tag | slugify | url_encode }}/"
+            class="post-tag no-text-decoration" >
+            {{- tag -}}
+          </a>
+          {% endfor %}
+          </div>
+        
+
       </div>
 
       {% if post.pin %}
