--- a/assets/css/_colors/dark-typography.scss
+++ b/assets/css/_colors/dark-typography.scss
@@ -32,7 +32,7 @@
   --btn-backtotop-color: var(--text-color);
   --btn-backtotop-border-color: var(--btn-border-color);
   --btn-box-shadow: var(--main-wrapper-bg);
-  --card-header-bg: rgb(51, 50, 50);
+  --card-header-bg: #202125;
   --label-color: #F5F6F7;
   --checkbox-color: rgb(118 120 121);
   --checkbox-checked-color: var(--link-color);
@@ -81,7 +81,7 @@
 
   /* categories */
   --categories-border: rgb(64, 66, 69);
-  --categories-hover-bg: rgb(73, 75, 76);
+  --categories-hover-bg: #27282b;
 
   /* archives */
   --timeline-node-bg: rgb(150, 152, 156);
