--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -30,6 +30,9 @@
       span:not(:last-child) {
         margin-right: 1.2rem;
       }
+      a{
+        border: 0px!important;
+      }
     }
 
     .post-content {
