--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,6 +60,9 @@
     integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
     crossorigin="anonymous">
 
+  <!--不蒜子-->
+  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
   <!--Valine-->
   <script src='//cdn.jsdelivr.net/npm/valine@1/dist/Valine.min.js'></script>
 
