--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -11,5 +11,5 @@
 
 <!-- return element -->
 <span class="readtime" data-toggle="tooltip" data-placement="bottom" title="{{ words }} words">
-  {{- read_time -}}{{" "}}{{- site.data.read_time.prompt -}}{{" "}}to read
+  {{- read_time -}}{{" "}}{{- site.data.read_time.prompt -}}
 </span>
