--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -8,7 +8,7 @@
 
 @mixin light-scheme {
   /* Common */
-  --body-bg: #fafafa;
+  --body-bg: #f5f7f9;
   --mask-bg: #c1c3c5;
   --main-wrapper-bg: white;
   --main-border-color: #f3f3f3;
