--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,7 +51,7 @@ layout: default
           <!-- read time -->
           {% include read-time.html content=content %}
 
-          <span id="busuanzi_value_site_uv"> </span> views
+          <span id="busuanzi_value_page_uv"> </span> views
 
           <!-- page views -->
           {% if site.google_analytics.pv.enabled %}
