--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -321,7 +321,7 @@ $prompt-newer: "{{ site.data.label.post.button.next }}";
 
 @media all and (max-width: 768px) {
   .post img {
-    max-width: calc(100% + .1rem);
+    max-width: calc(100% + 1rem);
   }
 }
 
