add valine system #2

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,11 +64,11 @@
   <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
   <!-- Valine Comment -->
-  {% if site.valine_comment.enable and page.comments == true %}
+
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
-  <script src='//cdn.jsdelivr.net/npm/valine@latest/dist/Valine.min.js'></script>
+  <script src='//cdn.jsdelivr.net/npm/valine@1.1.7/dist/Valine.min.js'></script>
   <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
-  {% endif %}
+
 
   {% include css-selector.html %}
 
