--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -55,8 +55,7 @@ body {
   background: var(--body-bg);
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
-  /*font-family: 'Source Sans Pro', 'PingFang SC', 'Microsoft Yahei', sans-serif; */
-  font-family: 'Ubuntu',-apple-system,BlinkMacSystemFont,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","STHeiti","Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
+  font-family: 'Source Sans Pro', 'PingFang SC', 'Microsoft Yahei', sans-serif; 
 }
 
 .v[data-class=v] .vcards .vcard .vh .vmeta .vat {
