--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -48,10 +48,10 @@
   </div> <!-- .access -->
 
   {% if include.toc %}
-    <div id="toc-wrapper" class="pl-0 pr-4 mb-5">
+    <div id = "toc-wrapper" class="sticky pl-0 pr-4 mb-5">
       <span class="pl-3 pt-2 mb-2">
-      {{- site.data.label.panel.toc -}}
-      </span>
+        {{- site.data.label.panel.toc -}}
+        </span>
       <nav id="toc" data-toggle="toc"></nav>
     </div>
   {% endif %}
