customize the color of TOC

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1719,3 +1719,13 @@ div.mb-3, .my-3 {
 nav[data-toggle='toc'] .nav .nav > li > a {
   padding-bottom: 3px !important;
 }
+
+/* posts' toc, override BS */
+nav[data-toggle=toc] .nav-link.active,
+nav[data-toggle=toc] .nav-link.active:focus,
+nav[data-toggle=toc] .nav-link.active:hover,
+nav[data-toggle=toc] .nav > li > a:focus,
+nav[data-toggle=toc] .nav > li > a:hover {
+  color: var(--toc-highlight) !important;
+  border-left-color: var(--toc-highlight) !important;
+}
