--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -60,6 +60,7 @@
   --pin-color: #999fa4;
 
   /* Posts */
+  --toc-highlight: #0079E7;
   --btn-share-hover-color: var(--link-color);
   --card-border-color: #f1f1f1;
   --card-box-shadow: rgba(234, 234, 234, 0.7686274509803922);
