commit 4th post on MySQL & fix some bugs on yesterday posts

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1718,6 +1718,7 @@ div.mb-3, .my-3 {
 }
 nav[data-toggle='toc'] .nav .nav > li > a {
   padding-bottom: 3px !important;
+  padding-left: 40px;
 }
 
 /* posts' toc, override BS */
