commit one post on MySQL bugs

--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -40,7 +40,7 @@
 
 %heading {
   font-weight: bold;
-  font-family: 'Lato', 'Microsoft Yahei', sans-serif;
+  font-family: 'Lato', '微软雅黑', 'Microsoft Yahei', sans-serif;
 }
 
 %section {
