--- a/_sass/colors/light-syntax.scss
+++ b/_sass/colors/light-syntax.scss
@@ -7,7 +7,7 @@
 @mixin light-syntax {
 
   $highlight-background   : #f7f7f7;
-  $highlight-foreground   : #383a42;
+  $highlight-foreground   : #4d5472;
   $highlight-comment      : #8e908c;
   $highlight-red          : #e45649;
   $highlight-orange       : #986801;
