--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -44,7 +44,7 @@
   --topbar-text-color: rgb(78, 78, 78);
   --search-wrapper-bg: #f5f5f5;
   --search-tag-bg: #f8f9fa;
-  --search-icon-color: #c2c6cc;
+  --search-icon-color: #64677a;
   --input-focus-border-color: var(--btn-border-color);
 
   /* Home page */
