--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -125,7 +125,9 @@ $sidebar-display: "sidebar-display";
     }
     &.active {
       .nav-link {
-        color: #1B86F9;
+        color: #007bff;
+        background-color: var(--main-wrapper-bg);
+        border-radius: 15px 0px 0px 15px;
       }
     }
   }
@@ -258,6 +260,7 @@ $sidebar-display: "sidebar-display";
     height: 6rem;
     border-radius: 50%;
     border: 2px solid #b6b6b6;
+    box-shadow: 0 5px 18px rgb(141 149 156 / 30%);
     overflow: hidden;
     transform: translateZ(0); // fixed the zoom in Safari
     -webkit-transition: border-color 0.35s ease-in-out;
