--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -260,7 +260,7 @@ $sidebar-display: "sidebar-display";
     height: 6rem;
     border-radius: 50%;
     border: 2px solid #b6b6b6;
-    box-shadow: 0 5px 18px rgb(141 149 156 / 30%);
+    box-shadow: 0 5px 18px rgba(149,157,165,0.2);
     overflow: hidden;
     transform: translateZ(0); // fixed the zoom in Safari
     -webkit-transition: border-color 0.35s ease-in-out;
