beautify the links & add verified file about Baidu

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -577,6 +577,7 @@ footer {
     border-radius: 0.8rem;
     padding: 0.3rem 0.5rem;
     margin: 0 0.35rem 0.5rem 0;
+    box-shadow: 0 3px 8px rgba(0,2,4,.06), 0 0 1px rgba(0,2,4,.11);
     &:hover {
       /* background-color: #1B86F9; */
       border-color: #1B86F9;
