--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -21,8 +21,9 @@
 }
 
 %link-hover {
-  color: #d2603a !important;
-  border-bottom: 1px solid #d2603a;
+  color: var(--sidebar-text-color);
+  background-color: rgba(243,128,32,.15);
+  border-bottom: 1px solid rgba(162, 79,11,.7);
   text-decoration: none;
 }
 
@@ -31,7 +32,7 @@
 }
 
 %link-underline {
-  border-bottom: 1px solid var(--link-underline-color);
+  border-bottom: 0.5px solid var(--link-underline-color);
 }
 
 %no-bottom-border {
