--- a/_includes/head.html
+++ b/_includes/head.html
@@ -79,6 +79,7 @@
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
   <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
 
+  <meta name="baidu-site-verification" content="code-SEm6KL3f7A" />
 
   {% include css-selector.html %}
 
