Modify the color of inline code

--- a/_sass/colors/dark-syntax.scss
+++ b/_sass/colors/dark-syntax.scss
@@ -17,7 +17,7 @@
 
   /* -----  My styles ------ */
   --highlight-bg-color: #272C33;
-  --highlighter-rouge-color: #de6b18;
+  --highlighter-rouge-color: #74b2f3;
   --highlight-lineno-color: #6c6c6d;
   --highlight-lineno-border-color: #303435;
   --inline-code-bg: #272822;
