Modify the path of imgs about avatar & pin

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@ layout: page
 
     <h1>
       <a href="{{ post.url | relative_url }}">
-        <img class="emoji" src = "https://gitee.com/j__strawhat/MyImages/raw/master/img/tp.png" width = "22px"/>
+        <img class="emoji" src = "/assets/img/sample/tp.png" width = "22px"/>
         {{ post.title }}
       </a>
     </h1>
