--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,8 +20,7 @@
         Powered by
         <a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a>
         with
-        <a href="https://github.com/cotes2020/jekyll-theme-chirpy"
-          target="_blank" rel="noopener">Chirpy</a>
+        <a href="{{ site.data.meta.homepage }}" target="_blank" rel="noopener">{{ site.data.meta.name }}</a>
         theme.
       </p>
     </div>
