--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -5,42 +5,21 @@
 <div id="topbar-wrapper" class="row justify-content-center topbar-down">
   <div id="topbar" class="col-11 d-flex h-100 align-items-center justify-content-between">
     <span id="breadcrumb">
-
-    {% assign paths = page.url | split: '/' %}
-
-    {% if paths.size == 0 %}
-      <!-- index page -->
-      <span>{{ 'Posts' }}</span>
-    {% else %}
-
-      {% for item in paths %}
-
-        {% if forloop.first %}
-          {% unless page.layout == 'post' %}
-          <span>
-            <a href="{{ '/' | relative_url }}">{{ 'Home' }}</a>
-          </span>
-          {% endunless %}
-
-        {% elsif forloop.last %}
-          <span>{{ page.title }}</span>
-
-        {% else %}
+      {% for item in page.breadcrumb %}
+        {% if item.url %}
         <span>
-          {% assign url = item %}
-          {% if item == 'posts' and page.layout == 'post' %}
-            {% assign url = '/' %}
-          {% endif %}
-          <a href="{{ url | relative_url }}">
-            {{ item | capitalize }}
+          <a href="{{ site.baseurl }}{{ item.url | remove: '.html'}}">
+            {{ item.label }}
           </a>
         </span>
-
+        {% else %}
+          <span>{{ item.label }}</span>
         {% endif %}
-
       {% endfor %}
 
-    {% endif %}
+      {% unless page.layout == "home" %}
+        <span>{{ page.title }}</span>
+      {% endunless %}
 
     </span><!-- endof #breadcrumb -->
 
