--- a/_sass/layout/categories.scss
+++ b/_sass/layout/categories.scss
@@ -11,14 +11,6 @@
   .card-header {
     padding-right: 12px;
   }
-
-  i {
-    &.far,
-    &.fas {
-      font-size: 86%; // fontawesome icons
-    }
-  }
-
   .list-group-item {
     border-left: none;
     border-right: none;
@@ -37,6 +29,12 @@
     @extend %category-icon-color;
   }
 
+  i {
+    &.far, &.fas {
+      font-size: 86%; // fontawesome icons
+    }
+  }
+
 } // .categories
 
 .category-trigger {
@@ -44,7 +42,7 @@
   height: 1.7rem;
   border-radius: 50%;
   text-align: center;
-  color: #6c757d !important;
+  color: #6c757d!important;
   > i.fas {
     position: relative;
     height: 0.7rem;
