--- a/_sass/layout/category-tag.scss
+++ b/_sass/layout/category-tag.scss
@@ -2,17 +2,10 @@
   Style for page Category and Tag
 */
 
-.dash {
-  margin: 0 .5rem .6rem .5rem;
-  border-bottom: 2px dotted var(--dash-color);
-}
-
-#page-category,
-#page-tag {
+#page-category, #page-tag {
   ul > li {
     line-height: 1.5rem;
     padding: 0.6rem 0;
-
     &::before { // dot
       background: #999;
       width: 5px;
@@ -24,16 +17,14 @@
       top: 0.6rem;
       margin-right: 0.5rem;
     }
-
     > a { /* post's title */
-      @extend %no-bottom-border;
-
       font-size: 1.1rem;
+      @extend %no-bottom-border;
     }
-
     > span:last-child {
       white-space: nowrap;
-    } /* post's date */
+    }
+    /* post's date */
   }
 }
 
@@ -45,19 +36,22 @@
   font-size: 1.25rem;
 }
 
-#page-category,
-#page-tag,
-#access-lastmod {
-  a:hover {
+a:hover {
+  #page-category &,
+  #page-tag &,
+  #access-lastmod & {
     @extend %link-hover;
-
     margin-bottom: -1px; // Avoid jumping
   }
 }
 
+.dash {
+  margin: 0 .5rem .6rem .5rem;
+  border-bottom: 2px dotted var(--dash-color);
+}
+
 @media all and (max-width: 576px) {
-  #page-category,
-  #page-tag {
+  #page-category, #page-tag {
     ul > li {
       &::before {
         margin: 0 .5rem;
