Add leancloud-visitors-count by Valine

--- a/_includes/valine-comments.html
+++ b/_includes/valine-comments.html
@@ -5,7 +5,7 @@
     new Valine({
         av: AV,
         el: '#comments',
-        visitor: true,
+        visitor: true, // 阅读量统计
         app_id: '{{ site.valine_comment.leancloud_appid }}',
         app_key: '{{ site.valine_comment.leancloud_appkey }}',
         placeholder:'{{ site.valine_comment.placeholder }}',
