--- a/_sass/colors/light-syntax.scss
+++ b/_sass/colors/light-syntax.scss
@@ -7,8 +7,8 @@
 @mixin light-syntax {
 
   $highlight-background   : #f7f7f7;
-  $highlight-foreground   : #4d5472;
-  $highlight-comment      : #8e908c;
+  $highlight-foreground   : #28282b;
+  $highlight-comment      : #868686;
   $highlight-red          : #e45649;
   $highlight-orange       : #986801;
   $highlight-yellow       : #c18401;
