--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -41,8 +41,8 @@
 
 %heading {
   font-weight: bold;
-  font-family: 'Lato', 'PingFang SC', 'Microsoft Yahei', sans-serif;
-}
+  font-family: 'Microsoft Yahei', sans-serif;
+} /*'Lato', 'PingFang SC', */
 
 %section {
   #post-wrapper & {
