Update the colors & contents

--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -6,8 +6,8 @@
   /* framework */
   --main-wrapper-bg: #17181b;
   --body-bg: var(--main-wrapper-bg);
-  --topbar-wrapper-bg: rgb(39, 40, 43);
-  --search-wrapper-bg: rgb(34, 34, 39);
+  --topbar-wrapper-bg: #1e2026;
+  --search-wrapper-bg: #131419;
   --search-icon-color: rgb(100, 102, 105);
   --input-focus-border-color: rgb(112, 114, 115);
   --mask-bg: rgb(68, 69, 70);
@@ -15,7 +15,7 @@
 
   /* common color */
   --text-color: #F5F6F7;
-  --strong-color: #74b2f3;
+  --strong-color: #5d97f8;
   --text-muted-color: rgb(107, 116, 124);
   --link-color: rgb(138, 180, 248);
   --link-underline-color: #1B86F9;
@@ -23,7 +23,7 @@
   --button-bg: rgb(39, 40, 43);
   --blockquote-border-color: #1B86F9;
   --blockquote-text-color: #F5F6F7;
-  --blockquote-bg-color: #272C33;
+  --blockquote-bg-color: #212226;
   --btn-border-color: rgb(63, 65, 68);
   --btn-backtotop-color: var(--text-color);
   --btn-backtotop-border-color: var(--btn-border-color);
