--- a/_sass/colors/dark-syntax.scss
+++ b/_sass/colors/dark-syntax.scss
@@ -17,10 +17,10 @@
 
   /* -----  My styles ------ */
   --highlight-bg-color: #272C33;
-  --highlighter-rouge-color: #74b2f3;
+  --highlighter-rouge-color: #bfbfbf;
   --highlight-lineno-color: #6c6c6d;
   --highlight-lineno-border-color: #303435;
-  --inline-code-bg: #272822;
+  --inline-code-bg: #272c33;
 
   .highlight {
     .gp { color: #818c96; }
