--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -25,7 +25,7 @@
   --blockquote-text-color: #F5F6F7;
   --blockquote-bg-color: #212226;
   --btn-border-color: rgb(63, 65, 68);
-  --btn-backtotop-color: var(--text-color);
+  --btn-backtotop-color: #5c86ff;
   --btn-backtotop-border-color: var(--btn-border-color);
   --btn-box-shadow: var(--main-wrapper-bg);
   --card-header-bg: #202125;
@@ -55,7 +55,7 @@
   --pin-color: inherit;
 
   /* Posts */
-  --toc-highlight: rgb(116, 178, 243);
+  --toc-highlight: #5c86ff;
   --tag-bg: rgb(41, 40, 40);
   --tag-hover: rgb(43, 56, 62);
   --tb-odd-bg: rgba(42, 47, 53, 0.52); /* odd rows of the posts' table */
