Beautify the color of dark mode

--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -22,9 +22,9 @@
 }
 
 %link-hover {
-  color: var(--sidebar-text-color);
-  background-color: rgba(243,128,32,.15);
-  border-bottom: 1px solid rgba(162, 79,11,.7);
+  color: #19181a;
+  background-color: #ffd866;
+  border-bottom: 1px solid #fc9867;
   text-decoration: none;
 }
 
