--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -15,10 +15,10 @@
 
   /* common color */
   --text-color: #F5F6F7;
-  --strong-color: #5d97f8;
+  --strong-color: #f06292;
   --text-muted-color: rgb(107, 116, 124);
   --link-color: rgb(138, 180, 248);
-  --link-underline-color: #1B86F9;
+  --link-underline-color: #78dce8;
   --main-border-color: rgb(44, 45, 45);
   --button-bg: rgb(39, 40, 43);
   --blockquote-border-color: #1B86F9;
