Update recent posts and new colors

--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -22,9 +22,9 @@
 }
 
 %link-hover {
-  color: #19181a;
-  background-color: #ffd866;
-  border-bottom: 1px solid #fc9867;
+  color: #1B86F9;
+  /* background-color: #ffd866;
+  border-bottom: 1px solid #fc9867; */
   text-decoration: none;
 }
 
