--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -15,7 +15,7 @@
 
   /* common color */
   --text-color: #F5F6F7;
-  --strong-color: #f06292;
+  --strong-color: #90cdf4;
   --text-muted-color: rgb(107, 116, 124);
   --link-color: rgb(138, 180, 248);
   --link-underline-color: #78dce8;
@@ -57,7 +57,7 @@
   /* Posts */
   --toc-highlight: #5c86ff;
   --tag-bg: rgb(41, 40, 40);
-  --tag-hover: rgb(43, 56, 62);
+  --tag-hover: #292b34;
   --tb-odd-bg: rgba(42, 47, 53, 0.52); /* odd rows of the posts' table */
   --tb-even-bg: rgb(31, 31, 34); /* even rows of the posts' table */
   --tb-border-color: var(--tb-odd-bg);
