--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -69,7 +69,7 @@
   --tag-bg: rgba(0, 0, 0, 0.075);
   --tag-border: #dee2e6;
   --tag-shadow: var(--btn-border-color);
-  --tag-hover: rgb(222, 226, 230);
+  --tag-hover: #edf2f7;
   --categories-hover-bg: var(--btn-border-color);
   --dash-color: silver;
 
