--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,7 @@ layout: default
         <!-- Published date and author -->
         
         <div>
+          Created
           {% include timeago.html date=page.date tooltip=true %}
           by
           <span class="author">
