--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -4,7 +4,7 @@
 
 @mixin light-scheme {
   /* Common */
-  --body-bg: #f5f7f9;
+  --body-bg: #f7fafc;
   --mask-bg: #c1c3c5;
   --main-wrapper-bg: white;
   --main-border-color: #f3f3f3;
