--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -37,7 +37,7 @@
   --nav-cursor-color: #1B86F9;
   --sidebar-bg: radial-gradient(circle, #242424 0%, #1d1f27 100%);
   
-  --sidebar-text-color: #F5F6F7
+  --sidebar-text-color: #F5F6F7;
 
   /* Top Bar */
   --topbar-text-color: var(--text-color);
