--- a/_sass/layout/archives.scss
+++ b/_sass/layout/archives.scss
@@ -53,10 +53,9 @@
       height: 12px;
       top: -26px;
       left: 63px;
-      border: 3px solid;
-      background-color: var(--timeline-year-dot-color);
-      border-color: var(--timeline-node-bg);
-      box-shadow: 0 0 2px 0 #c2c6cc;
+      border: 3px solid #1B86F9;
+      background-color: #ffffff;
+      box-shadow: 0 0 3px 0 #c2c6cc;
       z-index: 1;
     }
   } // #archives span.lead
